infrastructure/kustomize/ui/k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 8088
