infrastructure/kustomize/ui/k8s-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}
spec:
  gateways:
    - shared/gateway
  hosts:
    - "*"
